[ADD] Core: Base64 utility class added [MOD] remaining license information updated to BSD